...
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:scrollY="-30dp"
        android:contentDescription="@string/iv_top_image_description"
        app:layout_constraintBottom_toTopOf="@+id/rv_sweets_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_image" />

    <android.support.v7.widget.RecyclerView
...
