...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_image" />

            <TextView
                android:id="@+id/tv_sweet_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin_text_spacing"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/card_margin_text_spacing"
                android:layout_marginTop="@dimen/card_margin_text_spacing"
...
